--- a/test.plist
+++ b/test.plist
@@ -9,7 +9,7 @@
 <key>kind</key>
 <string>software-package</string>
 <key>url</key>
-<string>你的服务器ipa下载地址</string>
+<string>https://github.com/kissyoufate/AppInstall/blob/master/YouXiPartner_0306.ipa?raw=true</string>
 </dict>
 <dict>
 <key>kind</key>
@@ -37,7 +37,7 @@
 <key>bundle-identifier</key>
 <string>标识</string>
 <key>bundle-version</key>
-<string>版本号</string>
+<string>1.0.0</string>
 <key>kind</key>
 <string>software</string>
 <key>title</key>
