--- a/test.plist
+++ b/test.plist
@@ -9,7 +9,7 @@
 <key>kind</key>
 <string>software-package</string>
 <key>url</key>
-<string>https://github.com/kissyoufate/AppInstall/blob/master/YouXiPartner_0306.ipa?raw=true</string>
+<string>http://localhost/YouXiPartner_0306.ipa</string>
 </dict>
 <dict>
 <key>kind</key>
